--- a/client/pages/home.html
+++ b/client/pages/home.html
@@ -30,6 +30,7 @@
       <div id="modal-container" class="modal-container"></div>
       
       
-      <script type="module" src="./index.controller.js"></script>
+      <script type="module" src="./home.controller.js"></script>
+      <script type="module" src="./carrito.controller.js"></script>
 </body>
 </html>
