--- a/client/pages/admin/admin.html
+++ b/client/pages/admin/admin.html
@@ -11,7 +11,7 @@
     <div class="nav-container">
         <nav class="navbar">
           <h1 class="navbar-logo">Epic PS2 Games</h1>
-          <button id="cambiarVistaBtn" class="admin-button">Cambiar a Cliente</button>
+          <button id="cambiarVistaBtn" class="cerrarSesion">Cambiar a Cliente</button>
         </nav>
       </div>
   
