--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -13,7 +13,7 @@
           <h1 class="navbar-logo">Epic PS2 Games</h1>
           <div class="nav-right">
             <h1 class="ver-carrito" id="verCarrito">🛒<span id="cantidadCarrito" class="cantidad-carrito"></span></h1>
-            <button id="verOrdenesBtn" class="admin-button">Cambiar a Admin</button>
+            <button id="cerrar" class="cerrarSesion">Cerrar Sesión</button> 
           </div>
           
         </nav>
